2013-12-25  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	* progmodes/python.el:
	(python-nav--lisp-forward-sexp): New function.
	(python-nav--lisp-forward-sexp-safe): Use it.  Rename from
	python-nav-lisp-forward-sexp-safe.
	(python-nav--forward-sexp): New argument SAFE allows switching
	forward sexp movement behavior for parens.
	(python-nav-forward-sexp): Throw errors on unterminated parens
	(Bug#16191).
	(python-nav-backward-sexp, python-nav-forward-sexp-safe)
	(python-nav-backward-sexp-safe): New functions.
	(python-shell-buffer-substring): Use
	`python-nav-forward-sexp-safe'.

2013-12-25  Lars Ingebrigtsen  <larsi@gnus.org>

	* net/shr.el (shr-find-fill-point): Don't break lines before a
	quotation mark.
	(shr-char-kinsoku-bol-p): The quotation mark isn't a kinsoky BOL char.
	(shr-find-fill-point): Remove the special checks for the quotation
	mark, since `shr-char-kinsoku-bol-p' should now return the right
	thing.

2013-12-25  Kenjiro NAKAYAMA  <nakayamakenjiro@gmail.com>

	* net/eww.el (eww-form-textarea): Use a different face for
	textareas than text input since they have different keymaps
	(bug#16142).

2013-12-24  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	* progmodes/python.el (python-nav-beginning-of-statement): Speed
	up (Bug#15295).

2013-12-24  Lars Ingebrigtsen  <larsi@gnus.org>

	* net/eww.el (eww-bookmark-browse): Use `quit-window' to restore
	the window configuration.

2013-12-24  Eli Zaretskii  <eliz@gnu.org>

	* net/eww.el (eww-open-file): Ensure 3 slashes after "file:" when
	we run on MS-Windows or MS-DOS.

2013-12-24  Martin Rudalics  <rudalics@gmx.at>

	* window.el (balance-windows-area): Call window-size instead of
	window-height and window-width.  Bug#16241.

2013-12-24  Lars Ingebrigtsen  <larsi@gnus.org>

	* net/eww.el (eww-bookmark-quit): Remove.
	(eww-bookmark-browse): Restore the window configuration when you
	choose a bookmark (bug#16144).

2013-12-24  Daniel Colascione  <dancol@dancol.org>
